030-software/fluxcd/apps/cyberchef/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cyberchef
  labels:
    namespace: cyberchef
