030-software/fluxcd/apps/cyberchef/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cyberchef
  annotations:
    dashboard.${domain}/name: cyberchef
    dashboard.${domain}/url: https://cyberchef.${domain}
    dashboard.${domain}/icon: chef-hat
spec:
  hostnames:
    - cyberchef.${domain}
  parentRefs:
    - name: cilium
      namespace: cilium
  rules:
    - backendRefs:
        - name: cyberchef
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
